tests/neg/i3506.scala
trait C2[@specialized A] // error
class specialized extends C2[Char] // error
